# tlapa

./: .gitignore  README.md  check_errors.py  check_errors_detailed.py  check_parens.py  example_big.html  example_big.tla  example_large.tla  example_many_operators.tla  pyproject.toml  roadmap.md  roadmap3.md  test_diag.py  test_diag2.py  test_minimal.tla  test_minimal12.tla  test_minimal13.tla  test_minimal15.tla  test_minimal17.tla  test_minimal18.tla  test_minimal2.tla  test_minimal6.tla  test_minimal7.tla  test_minimal8.tla
.claude/: settings.local.json
docs/: BigExample.html  allocator.tla.html  architecture.md  domain-and-goals.md  example_large.html  glossary.md  index.html  requirements.md  system-context.md  valid.nassi.html  valid.tla.html
example/: big_example_nsd.html  big_nsd.html  demo.tla  demo_nsd.html  distributed_log.tla  distributed_log_clean.tla  distributed_log_full.tla  distributed_log_nsd.html  example_big_nsd.html  feature_tour.tla  feature_tour_nsd.html  test_bracket.tla  test_bullet.tla  test_bullet_prime.tla  test_double_index_cond.tla  test_election_timeout.tla  test_election_with_set.tla  test_except.tla  test_ge.tla  test_handle_request_vote_simple.tla  test_header_simple.tla  test_init_complex.tla  test_nested_if_branches.tla  test_nested_if_except.tla  test_nested_if_simple.tla  test_prime_eq.tla  test_record_in_op.tla  test_slash2.tla  test_start_with_bullet.tla  test_tick_pattern.tla  test_two_bullets_both_brackets.tla  test_two_bullets_set_literal.tla  test_two_bullets_simple.tla  test_with_set_literal.tla  test_wrong_bar.tla
(+221 files in other folders)
